--- a/css/style.css
+++ b/css/style.css
@@ -388,7 +388,7 @@
   }
   .results__heading {
     font-size: 1.3rem;
-    padding: 6rem 0.5rem;
+    padding: 6rem 0.5rem 1rem;
   }
   .results__text {
     font-size: 2.1rem;
@@ -442,6 +442,9 @@
     min-height: 1.5rem;
     -webkit-transform: scale(0.8);
             transform: scale(0.8);
+  }
+  .results__winner {
+    padding-top: 1.2rem;
   }
   .play-again {
     font-size: 0.9rem;
@@ -561,7 +564,7 @@ body {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 2.5rem;
+  height: 5.5rem;
   padding: 0 2rem;
   text-align: center;
   display: -webkit-box;
@@ -574,6 +577,9 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .attribution {
