--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -29,12 +29,13 @@ body {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 2.5rem;
+  height: 5.5rem;
   padding: 0 2rem;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
 }
 
 .attribution {
