--- a/css/style.css
+++ b/css/style.css
@@ -465,6 +465,7 @@
   -webkit-transition: opacity 0.3s ease-in-out;
   transition: opacity 0.3s ease-in-out;
   pointer-events: none;
+  z-index: 1;
 }
 
 .modal__container {
@@ -557,7 +558,7 @@ body {
   position: relative;
   max-width: 700px;
   margin: 0 auto;
-  padding-top: 6rem;
+  padding-top: 3rem;
 }
 
 .footer {
