--- a/sass/_modal.scss
+++ b/sass/_modal.scss
@@ -10,6 +10,7 @@
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
   pointer-events: none;
+  z-index: 1;
 }
 .modal__container {
   background: #fff;
